--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/app.js"
   },
   "author": "lu",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "fetch": "^1.1.0",
     "hbs": "^4.1.2",
+    "heroku": "^7.59.0",
     "node-fetch": "^3.0.0",
     "request": "^2.88.2"
   }
