--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "author": "lu",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "hbs": "^4.1.2",
     "heroku": "^7.59.0",
     "node-fetch": "^3.0.0",
+    "nodemon": "^2.0.12",
     "request": "^2.88.2"
   }
 }
